--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
                 .fundo{
                     text-align: center;
-                    background-image: linear-gradient(45deg, black, crimson );
+                    background-image: linear-gradient(45deg, black, green, blue);
                     height: 100vh;
                     color: white;
                     font-family: Arial, Helvetica, sans-serif;
