--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
                 <tr>
                     <td colspan="2"><button class="botao" onclick="insert('0')" style="width: 106px;">0</button></td>
-                    <td><button class="botao">.</button></td>
+                    <td><button class="botao" onclick="insert('.')">.</button></td>
                 </tr>
             </table>
      </div>
